# prompt-playground

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_playground_runs.py
backend/app/: main.py
backend/app/api/: reports.py
backend/app/api/v1/: datasets.py  evaluations.py  exports.py  playground.py  projects.py  prompts.py  router.py  use_cases.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py  dataset.py  eval.py  playground_run.py  project.py  prompt.py  prompt_version.py  use_case.py
backend/app/schemas/: __init__.py  base.py  dataset.py  project.py  prompt.py  use_case.py
backend/app/services/: eval_worker.py  evaluators.py  llm_service.py  template_service.py
doc/: Guide.md  README.md  Version_Compare.md  capture_screenshots.js  package-lock.json
doc/api/: datasets.md  evaluations.md  exports.md  overview.md  playground.md  projects.md  prompts.md  use-cases.md
doc/architecture/: backend-architecture.md  database-schema.md  frontend-architecture.md  system-overview.md
doc/backend/: configuration.md  models.md  services.md
doc/deployment/: docker.md  environment-variables.md
doc/frontend/: components.md  hooks.md  pages-routes.md
doc/getting-started/: development-setup.md  quick-start.md
doc/guides/: template-syntax.md  (+2 more)
frontend/: REFACTORING_PLAN.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
scripts/: smoke_test.sh
(+59 files in other folders)
